# app_5

./: .gitignore  Dockerfile  Dockerfile.api  Dockerfile.streamlit  README.md  docker-compose.yml  exploratory_analysis.ipynb  feature_engineering.ipynb  grafana.json  modelo.ipynb  pyproject.toml  taxonomia_habilidades.json
app/: logging_config.py  main.py  monitoring.py  reference_data.csv
app/static/: index.html
data/: READ.ME.txt
prometheus/config/: prometheus.yml
streamlit_app/: 0.0s  app.py  preprocess.py
