[project]
name = "proj5"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "ruff (>=0.11.9,<0.12.0)",
    "sentence-transformers (>=4.1.0,<5.0.0)",
    "xgboost (>=3.0.1,<4.0.0)",
    "lightgbm (>=4.6.0,<5.0.0)",
    "imblearn (>=0.0,<0.1)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
